--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -27,6 +27,8 @@ Adapt and overcome I guess :) - will start the morning by re-scanning each box. 
 
 ### 8:15 am
 
-I went and had a fried egg sandwitch (dang eggs got over-done) and brew another cup of coffee while this first box is being re-scanned. This is a rough start so far, but I'm calm and not panicky. 24 hours should be pleanty of time to do everything I can.
+I went and had a fried egg sandwitch (dang eggs got over-done) and brew another cup of coffee while this first box is being re-scanned. This is a rough start so far, but I'm calm and not panicky. 24 hours should be pleanty of time to do everything I can. Plus I'm wearing a black hoody, so everything will be ok, right?
+
+
 
 
