--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -29,6 +29,8 @@ Adapt and overcome I guess :) - will start the morning by re-scanning each box. 
 
 I went and had a fried egg sandwitch (dang eggs got over-done) and brew another cup of coffee while this first box is being re-scanned. This is a rough start so far, but I'm calm and not panicky. 24 hours should be pleanty of time to do everything I can. Plus I'm wearing a black hoody, so everything will be ok, right?
 
+### 9 am
 
+Just finished my first pomodoro break (5 mins). I did some stretching, meditated, and got more coffee. Back to hackin!
 
 
