--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -34,3 +34,7 @@ I went and had a fried egg sandwitch (dang eggs got over-done) and brew another 
 Just finished my first pomodoro break (5 mins). I did some stretching, meditated, and got more coffee. Back to hackin!
 
 
+### 9:30 am
+
+Just finishing second break. I'm starting to get a bit nervous that the failure to scan everything last night will kill my chances at completing this all in 24 hours. Guess we'll have to wait and see. HOOD UP.
+
