--- a/docs/OSCP practice exam/1. 10.10.10.182.md
+++ b/docs/OSCP practice exam/1. 10.10.10.182.md
@@ -11,13 +11,19 @@ PORT      STATE SERVICE       REASON          VERSION                           
 
 This one appears to be one of the AD boxes (Kerberos is running on port 88).
 
-### Technology Stack
+### Enumerate Attack Surface
 From reviewing the port scan, we see the following structure start to emerge:
 
 This box definitely is AD related.
 	- 88: Kerberos
+		- Maybe [Kerberoast?](https://book.hacktricks.xyz/windows/active-directory-methodology/kerberoast)
+		- Maybe [MS14-068?](https://book.hacktricks.xyz/pentesting/pentesting-kerberos-88#ms14-068)
 	- 389: LDAP
-	- 3268: LDAP
+		- Might be able to **dump everything**, or even **write data** with [Manual Enumeration](https://book.hacktricks.xyz/pentesting/pentesting-ldap#basic-enumeration)
+		- LDAP can be used without SSL - should sniff this 
+	- 636: tcpwrapped (typically LDAPs)
+	- 3268: LDAP (Global Catalog for LDAP)
+	- 3269: tcpwrapped (Global catalog for LDAPs)
 	
 > dnsHostName: `CASC-DC1.cascade.local`
 > ldapServiceName: `cascade.local:casc-dc1$@CASCADE.LOCAL`      
@@ -30,16 +36,13 @@ This box definitely is AD related.
 
 Definitely a domain controller, also DNS running:
 	- 53: Microsoft DNS 6.1.7601 `(Windows Server 2008 R2 SP1)`
+		- [Manual digging](https://book.hacktricks.xyz/pentesting/pentesting-dns#active-directory-servers)
 		
 Also it appears to have a fileshare:
 	- 139: Netbios-ssn
 		- Anonymous Login
 	- 445: Microsoft-ds
 	- RPC running on multiple ports
-	
-There are also a few interesting unknown services:
-	- 636: tcpwrapped
-	- 3269: tcpwrapped
 	
 And finally, a few HTTP servers:
 	- 5985: Microsoft HTTPAPI httpd 2.0
