--- a/docs/OSCP practice exam/2. 10.10.10.74.md
+++ b/docs/OSCP practice exam/2. 10.10.10.74.md
@@ -4,6 +4,23 @@
 While reviewing the scan materials for this - I noticed there are NO open ports. Well.....
 I will move on to the next box and come back to scan this one when the scanning of .182 is completed. If this were the actual exam I could scan them in paralel.
 
+### Port Scan
 
+```text
+PORT     STATE SERVICE    REASON          VERSION                                                                                                                            9255/tcp open  tcpwrapped syn-ack ttl 127                                                                                                                                    9256/tcp open  tcpwrapped syn-ack ttl 127                                                                                                           
+Warning: OSScan results may be unreliable because we could not find at least 1 open and 1 closed port                                                                        
+
+Device type: general purpose|phone|specialized
+
+Running (JUST GUESSING): Microsoft Windows 8|Phone|2008|7|8.1|Vista|2012 (92%)                                                                                               OS CPE: cpe:/o:microsoft:windows_8 cpe:/o:microsoft:windows cpe:/o:microsoft:windows_server_2008:r2 cpe:/o:microsoft:windows_7 cpe:/o:microsoft:windows_8.1 cpe:/o:microsoft:windows_vista::- cpe:/o:microsoft:windows_vista::sp1 cpe:/o:microsoft:windows_server_2012:r2                                                                                 
+
+OS fingerprint not ideal because: Missing a closed TCP port so results incomplete                                                                                            
+
+Aggressive OS guesses: Microsoft Windows 8.1 Update 1 (92%), Microsoft Windows Phone 7.5 or 8.0 (92%), Microsoft Windows 7 or Windows Server 2008 R2 (91%), Microsoft Windows Server 2008 R2 (91%), Microsoft Windows Server 2008 R2 or Windows 8.1 (91%), Microsoft Windows Server 2008 R2 SP1 or Windows 8 (91%), Microsoft Windows 7 (91%), Microsoft Windows 7 SP1 or Windows Server 2008 R2 (91%), Microsoft Windows Vista SP0 or SP1, Windows Server 2008 SP1, or Windows 7 (91%), Microsoft Windows Embedded Standard 7 (91%)   No exact OS matches for host (test conditions non-ideal)
+```
+
+Only 2 open ports. I guess the name `Chatterbox` is supposed to be a joke.
+
+Nothing really useful in the scan results. UDP ports are still being scanned, hopefully something comes up.
 
 
