--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -38,3 +38,6 @@ Just finished my first pomodoro break (5 mins). I did some stretching, meditated
 
 Just finishing second break. I'm starting to get a bit nervous that the failure to scan everything last night will kill my chances at completing this all in 24 hours. Guess we'll have to wait and see. HOOD UP.
 
+### 9:50 am
+
+Just hit a bottleneck. Currently scanning box 3/6 with autorecon. It's still doing dirbuster and I'm hesitant to kill that. While the scan is running I've been prepping the documentation by filling out possible attack vectors for each box that has been scanned. I guess I could go back and look for public exploits (might be needed for initial foothold on some of these.)
