--- a/docs/OSCP practice exam/2. 10.10.10.74.md
+++ b/docs/OSCP practice exam/2. 10.10.10.74.md
@@ -1,13 +1,13 @@
 # Chatterbox
 
 ## Recon
-While reviewing the scan materials for this - I noticed there are NO open ports. Well.....
-I will move on to the next box and come back to scan this one when the scanning of .182 is completed. If this were the actual exam I could scan them in paralel.
 
 ### Port Scan
 
 ```text
-PORT     STATE SERVICE    REASON          VERSION                                                                                                                            9255/tcp open  tcpwrapped syn-ack ttl 127                                                                                                                                    9256/tcp open  tcpwrapped syn-ack ttl 127                                                                                                           
+PORT     STATE SERVICE    REASON          VERSION                                                                                                                            9255/tcp open  tcpwrapped syn-ack ttl 127                                                                                                                                    
+
+9256/tcp open  tcpwrapped syn-ack ttl 127                                                                                                           
 Warning: OSScan results may be unreliable because we could not find at least 1 open and 1 closed port                                                                        
 
 Device type: general purpose|phone|specialized
@@ -21,6 +21,8 @@ Aggressive OS guesses: Microsoft Windows 8.1 Update 1 (92%), Microsoft Windows P
 
 Only 2 open ports. I guess the name `Chatterbox` is supposed to be a joke.
 
-Nothing really useful in the scan results. UDP ports are still being scanned, hopefully something comes up.
+Nothing really useful in the scan results. UDP ports are still being scanned, hopefully something comes up. Nothing came up. What on earth am I supposed to do with this box!?!?
+
+
 
 
