--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -1,6 +1,8 @@
 # General
 ## Day 1  - The Exam
 
+Official start time: `7:30am`
+
 ### 7:40 am
 
 Today (2/3/2022) I took time off work to do an OSCP practice exam.
@@ -41,3 +43,15 @@ Just finishing second break. I'm starting to get a bit nervous that the failure 
 ### 9:50 am
 
 Just hit a bottleneck. Currently scanning box 3/6 with autorecon. It's still doing dirbuster and I'm hesitant to kill that. While the scan is running I've been prepping the documentation by filling out possible attack vectors for each box that has been scanned. I guess I could go back and look for public exploits (might be needed for initial foothold on some of these.)
+
+
+### 10:03 am
+
+I've started my first long break (15 mins). Watching some funny Smosh videos on youtube to let my mind relax and forget about the chaos that's happening with this exam :)
+
+I was in the middle of collecting public exploits and felt like I could still going when break time came up. I started break to keep myself fresh; this is a marathon, not a sprint.
+
+Got up and moved around a bit to keep myself from getting chair fatigue.
+
+Looking at it....I'm actually doing pretty well for time. I'm almost 50% done with Recon in the first 2.5 hours (about 10% into the time limit)
+
