--- a/docs/OSCP practice exam/1. 10.10.10.182.md
+++ b/docs/OSCP practice exam/1. 10.10.10.182.md
@@ -13,7 +13,9 @@ PORT      STATE SERVICE       REASON          VERSION                           
 
 139/tcp   open  netbios-ssn   syn-ack ttl 127 Microsoft Windows netbios-ssn                                                                                                  
 
-389/tcp   open  ldap          syn-ack ttl 127 Microsoft Windows Active Directory LDAP (Domain: cascade.local, Site: Default-First-Site-Name)                                 445/tcp   open  microsoft-ds? syn-ack ttl 127                                                                                                                                
+389/tcp   open  ldap          syn-ack ttl 127 Microsoft Windows Active Directory LDAP (Domain: cascade.local, Site: Default-First-Site-Name)                                 
+
+445/tcp   open  microsoft-ds? syn-ack ttl 127                                                                                                                                
 
 636/tcp   open  tcpwrapped    syn-ack ttl 127                                                                                                                                
 
@@ -41,7 +43,7 @@ Aggressive OS guesses: Microsoft Windows 8.1 Update 1 (92%), Microsoft Windows P
 
 This one appears to be one of the AD boxes (Kerberos is running on port 88).
 
-### Enumerate Attack Surface
+## Enumerate Attack Surface
 From reviewing the port scan, we see the following structure start to emerge:
 
 This box definitely is AD related.
@@ -79,4 +81,13 @@ And finally, a few HTTP servers:
 		- WinRM? check `_manual_commands.txt`
 	- 49157: ncacn_http - RPC over HTTP 1.0
 	
-	
+#### Public Exploits
+
+![[Pasted image 20220203095239.png]]
+
+Maybe one of the Eternal exploits would work for Initial foothold? Would need to verify anon login for SMB first. Searchsploit agrees (based on Windows version reported by DNS)
+
+![[Pasted image 20220203095718.png]]
+
+
+
