--- a/docs/OSCP practice exam/2. 10.10.10.74.md
+++ b/docs/OSCP practice exam/2. 10.10.10.74.md
@@ -23,6 +23,8 @@ Only 2 open ports. I guess the name `Chatterbox` is supposed to be a joke.
 
 Nothing really useful in the scan results. UDP ports are still being scanned, hopefully something comes up. Nothing came up. What on earth am I supposed to do with this box!?!?
 
+I feel like I'll need to rescan this one....or something.
+
 
 
 
