--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -55,3 +55,8 @@ Got up and moved around a bit to keep myself from getting chair fatigue.
 
 Looking at it....I'm actually doing pretty well for time. I'm almost 50% done with Recon in the first 2.5 hours (about 10% into the time limit)
 
+### 10:19 am
+
+Break is over, I'm all caught up with enumeration up to the scan point. The only scan left is Dirbuster on Cronos (10.10.10.13). I'm going to kill it and hopefully not miss anything. Can always start it again later if I get stuck on this box.
+
+While the scan for the next box runs I'm going to take an early lunch.
