--- a/docs/OSCP practice exam/3. 10.10.10.13.md
+++ b/docs/OSCP practice exam/3. 10.10.10.13.md
@@ -32,7 +32,9 @@ This box also has a webserver:
 	- Webserver: Apache 2.4.18
 		- `/index.html` Got a 200 status code for this homepage.
 		- Scan reveals Apache may be default configuration - this hasn't been set up yet.
+		- 
 		
 		
 ### Public Explotis
 
+![[Pasted image 20220203101658.png]]
