--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -62,3 +62,15 @@ Looking at it....I'm actually doing pretty well for time. I'm almost 50% done wi
 Break is over, I'm all caught up with enumeration up to the scan point. The only scan left is Dirbuster on Cronos (10.10.10.13). I'm going to kill it and hopefully not miss anything. Can always start it again later if I get stuck on this box.
 
 While the scan for the next box runs I'm going to take an early lunch.
+
+### 11:44 am
+
+Back from lunch. I even showered. If I fail this, I'm going to blame the lack of black hoody during exploit. Everyone knows you gotta look like this while you're hacking:
+
+![[Pasted image 20220203114552.png]]
+
+I ran into the bottleneck again. I'm going to let dirbuster run for about 30 mins and if NOTHING comes back in the 30 mins I think it's safe to abort.
+
+Alright, lets get back at it!
+
+
