--- a/docs/OSCP practice exam/4. Forest.md
+++ b/docs/OSCP practice exam/4. Forest.md
@@ -29,28 +29,28 @@ SMB?
 
 Other
 - 464: kpasswd5?
+	- A service for **changing LDAP passwords!?**
 - 593: ncacn_http - RPC over HTTP 1.0
-- 9389: mc-nmf - >NET Message Framing
+- 9389: mc-nmf - .NET Message Framing
 
 Web:
 - 5985: Microsoft HTTPAPI httpd 2.0
+	- WinRM? - check manual commands.
 - 47001: Microsoft HTTPAPI httpd 2.0
 
 
-Enum4linux did a great job on this one! Got a bunch of details about users and groups.
+Enum4linux did a great job on this one! Got a bunch of details about users.
+Here is a list of users with enabled accounts:
+> - All the `HealthMailbox` users
+> - `lucinda`
+> - `Administrator`
+> - `sebastien`
+> - `santi`
+> - `svc-alfresco`
+> - `mark`
+> - `andy`
 
-```
-grep -E 'User Name|Account Disabled' enum4linux.txt                                                                                                                  User Name   :   DefaultAccount                                                                                                                                               Account Disabled         : True                                                                                                                                              User Name   :   $331000-VK4ADACQNUCA                                                                                                                                         Account Disabled         : True                                                                                                                                              User Name   :   HealthMailboxc3d7722                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   SM_681f53d4942840e18                                                                                                                                         Account Disabled         : True                                                                                                                                              User Name   :   SM_1ffab36a2f5f479cb                                                                                                                                         Account Disabled         : True                                                                                                                                              User Name   :   andy                                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   HealthMailboxfc9daad                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   HealthMailbox83d6781                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   HealthMailbox6ded678                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   HealthMailbox7108a4e                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   HealthMailboxfd87238                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   HealthMailboxc0a90c9                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   SM_1b41c9286325456bb                                                                                                                                         Account Disabled         : True                                                                                                                                              User Name   :   mark                                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   svc-alfresco                                                                                                                                                 Account Disabled         : False                                                                                                                                             User Name   :   HealthMailbox0659cc1
-Account Disabled         : False                                                                                                                                             User Name   :   SM_ca8c2ed5bdab4dc9b                                                                                                                                         Account Disabled         : True                                                                                                                                              User Name   :   SM_9b69f1b9d2cc45549                                                                                                                                         Account Disabled         : True                                                                                                                                              User Name   :   HealthMailboxb01ac64                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   santi                                                                                                                                                        Account Disabled         : False                                                                                                                                             User Name   :   HealthMailbox968e74d                                                                                                                                         Account Disabled         : False                                                                                                                                             User Name   :   SM_75a538d3025e4db9a                                                                                                                                         Account Disabled         : True                                                                                                                                              User Name   :   SM_7c96b981967141ebb                                                                                                                                         Account Disabled         : True                                                                                                                                              User Name   :   krbtgt                                                                                                                                                       Account Disabled         : True                                                                                                                                              User Name   :   sebastien                                                                                                                                                    Account Disabled         : False                                                                                                                                             User Name   :   SM_2c8eef0a09b545acb                                                                                                                                         Account Disabled         : True                                                                                                                                              User Name   :   Administrator                                                                                                                                                Account Disabled         : False                                                                                                                                             User Name   :   lucinda                                                                                                                                                      Account Disabled         : False                                                                                                                                             User Name   :   Guest                                                                                                                                                        Account Disabled         : True                                                                                                                                              User Name   :   SM_c75ee099d0a64c91b                                                                                                                                         Account Disabled         : True                                                                                                                                              User Name   :   HealthMailbox670628e                                                                                                                                         Account Disabled         : False    
-```
+## Public exploits
 
-So, I have a list of users with enabled accounts:
-- All the `HealthMailbox` users
-- `lucinda`
-- `Administrator`
-- `sebastien`
-- `santi`
-- `svc-alfresco`
-- `mark`
-- `andy`
+Didn't find any.
 
