--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -74,3 +74,10 @@ I ran into the bottleneck again. I'm going to let dirbuster run for about 30 min
 Alright, lets get back at it!
 
 
+### 12:46 pm
+
+Making good progress! Documenting/Enumerating is right behind the scanner. Scanning 5/6 and enumerating 5/6.
+
+I'm excited and nervous to start the weaponization/exploitation phase of these attacks. The active directory boxes will be interesting - I'm thinking of saving them for last since it's all or none. I can at least get some points with the standard boxes. Then hopefully I'll have enough time to figure out the AD boxes with some research.
+
+
