--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -76,7 +76,7 @@ Alright, lets get back at it!
 
 ### 12:46 pm
 
-Making good progress! Documenting/Enumerating is right behind the scanner. Scanning 5/6 and enumerating 5/6.
+Time for another long (15min) break! Making good progress. Documenting/Enumertion is right behind the scanner. Scanning 5/6 and enumerating 5/6.
 
 I'm excited and nervous to start the weaponization/exploitation phase of these attacks. The active directory boxes will be interesting - I'm thinking of saving them for last since it's all or none. I can at least get some points with the standard boxes. Then hopefully I'll have enough time to figure out the AD boxes with some research.
 
