--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -81,3 +81,7 @@ Time for another long (15min) break! Making good progress. Documenting/Enumertio
 I'm excited and nervous to start the weaponization/exploitation phase of these attacks. The active directory boxes will be interesting - I'm thinking of saving them for last since it's all or none. I can at least get some points with the standard boxes. Then hopefully I'll have enough time to figure out the AD boxes with some research.
 
 
+### 1:25 pm
+
+I ended up extending my break, the mental fatigue is starting to set in. I may need to take a nap or something after this session.
+
