--- a/docs/OSCP practice exam/5. Sauna.md
+++ b/docs/OSCP practice exam/5. Sauna.md
@@ -47,6 +47,9 @@ SMB
 
 Webserver
 	- 80: Microsoft IIS 10.0
+		- `Bootstrap 4.0.0`
+		
+
 ```text
 200      640l     1767w    30954c http://10.10.10.175/About.html                                                                                                             200      470l     1279w    24695c http://10.10.10.175/Blog.html                                                                                                              200      325l      770w    15634c http://10.10.10.175/Contact.html                                                                                                           301        2l       10w      150c http://10.10.10.175/Images                                                                                                                 200      683l     1813w    32797c http://10.10.10.175/Index.html                                                                                                             200      640l     1767w    30954c http://10.10.10.175/about.html                                                                                                             200      470l     1279w    24695c http://10.10.10.175/blog.html                                                                                                              200      325l      770w    15634c http://10.10.10.175/contact.html                                                                                                           301        2l       10w      147c http://10.10.10.175/css                                                                                                                    301        2l       10w      149c http://10.10.10.175/fonts                                                                                                                  301        2l       10w      150c http://10.10.10.175/images                                                                                                                 200      683l     1813w    32797c http://10.10.10.175/index.html                                                                                                             200      684l     1814w    38059c http://10.10.10.175/single.html
 
@@ -55,4 +58,10 @@ Webserver
 Others
 	- 593: Microsoft RPC over HTTP 1.0
 	- 9389: .Net Message Framing
+	- 5985: Microsoft HTTPAPI httpd 2.0
+		- WinRM? Check `_manual_commands.txt`
 	- 49673: Microsoft RCP over HTTP 1.0
+	
+	
+### Public Exploits
+
