--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -85,3 +85,6 @@ I'm excited and nervous to start the weaponization/exploitation phase of these a
 
 I ended up extending my break, the mental fatigue is starting to set in. I may need to take a nap or something after this session.
 
+### 1:35 pm
+
+Started scan 6/6 - going to take a long break/nap and hopefully come back ready to exploit!
