--- a/docs/OSCP practice exam/0. Intro.md
+++ b/docs/OSCP practice exam/0. Intro.md
@@ -88,3 +88,8 @@ I ended up extending my break, the mental fatigue is starting to set in. I may n
 ### 1:35 pm
 
 Started scan 6/6 - going to take a long break/nap and hopefully come back ready to exploit!
+
+### 4:26 pm
+
+I'm back to it. Had a good nap, ate some snacks. I'm not super excited to do this, but I'm ready.
+
