--- a/docs/OSCP practice exam/1. Cascade.md
+++ b/docs/OSCP practice exam/1. Cascade.md
@@ -47,15 +47,15 @@ This one appears to be one of the AD boxes (Kerberos is running on port 88).
 From reviewing the port scan, we see the following structure start to emerge:
 
 This box definitely is AD related.
-	- 88: Kerberos
-		- Maybe [Kerberoast?](https://book.hacktricks.xyz/windows/active-directory-methodology/kerberoast)
-		- Maybe [MS14-068?](https://book.hacktricks.xyz/pentesting/pentesting-kerberos-88#ms14-068)
-	- 389: LDAP
-		- Might be able to **dump everything**, or even **write data** with [Manual Enumeration](https://book.hacktricks.xyz/pentesting/pentesting-ldap#basic-enumeration)
-		- LDAP can be used without SSL - should sniff this 
-	- 636: tcpwrapped (typically LDAPs)
-	- 3268: LDAP (Global Catalog for LDAP)
-	- 3269: tcpwrapped (Global catalog for LDAPs)
+- 88: Kerberos  
+	- Maybe [Kerberoast?](https://book.hacktricks.xyz/windows/active-directory-methodology/kerberoast)
+	- Maybe [MS14-068?](https://book.hacktricks.xyz/pentesting/pentesting-kerberos-88#ms14-068)
+- 389: LDAP
+	- Might be able to **dump everything**, or even **write data** with [Manual Enumeration](https://book.hacktricks.xyz/pentesting/pentesting-ldap#basic-enumeration)
+	- LDAP can be used without SSL - should sniff this 
+- 636: tcpwrapped (typically LDAPs)
+- 3268: LDAP (Global Catalog for LDAP)
+- 3269: tcpwrapped (Global catalog for LDAPs)
 	
 > dnsHostName: `CASC-DC1.cascade.local`
 > ldapServiceName: `cascade.local:casc-dc1$@CASCADE.LOCAL`      
@@ -67,19 +67,19 @@ This box definitely is AD related.
 	
 
 Definitely a domain controller, also DNS running:
-	- 53: Microsoft DNS 6.1.7601 `(Windows Server 2008 R2 SP1)`
-		- [Manual digging](https://book.hacktricks.xyz/pentesting/pentesting-dns#active-directory-servers)
+- 53: Microsoft DNS 6.1.7601 `(Windows Server 2008 R2 SP1)`
+	- [Manual digging](https://book.hacktricks.xyz/pentesting/pentesting-dns#active-directory-servers)
 		
 Also it appears to have a fileshare:
-	- 139: Netbios-ssn
-		- Anonymous Login
-	- 445: Microsoft-ds
-	- RPC running on multiple ports
+- 139: Netbios-ssn
+	- Anonymous Login
+- 445: Microsoft-ds
+- RPC running on multiple ports
 	
 And finally, a few HTTP servers:
-	- 5985: Microsoft HTTPAPI httpd 2.0
-		- WinRM? check `_manual_commands.txt`
-	- 49157: ncacn_http - RPC over HTTP 1.0
+- 5985: Microsoft HTTPAPI httpd 2.0
+	- WinRM? check `_manual_commands.txt`
+- 49157: ncacn_http - RPC over HTTP 1.0
 	
 #### Public Exploits
 
@@ -90,4 +90,13 @@ Maybe one of the Eternal exploits would work for Initial foothold? Would need to
 ![[Pasted image 20220203095718.png]]
 
 
+## Weaponization
 
+### Exploit planning
+
+1. Check MS17-010 [EDB-42031](https://www.exploit-db.com/exploits/42031)
+
+
+### PrivEsc Planning
+1. Kerberoast
+2. 
