--- a/docs/OSCP practice exam/6. Sense.md
+++ b/docs/OSCP practice exam/6. Sense.md
@@ -4,9 +4,22 @@
 
 ### Port Scan
 ```text
-
+PORT    STATE SERVICE  VERSION                                                                                                                                               80/tcp  open  http     lighttpd 1.4.35                                                                                                                                       443/tcp open  ssl/http lighttpd 1.4.35 
 
 ```
 
 
 ## Enumerate attack surface
+
+Webserver
+- 80: lighttpd 1.4.35 (http)
+- 443: lighttpd 1.4.35 (https)
+
+	
+### Public exploits.
+![[Pasted image 20220203163137.png]]
+
+
+## A closer look at the webserver
+![[Pasted image 20220203165217.png]]
+
