--- a/docs/OSCP practice exam/1. Cascade.md
+++ b/docs/OSCP practice exam/1. Cascade.md
@@ -94,9 +94,11 @@ Maybe one of the Eternal exploits would work for Initial foothold? Would need to
 
 ### Exploit planning
 
-1. Check MS17-010 [EDB-42031](https://www.exploit-db.com/exploits/42031)
+1. Check SMB anon login
+2. Check MS17-010 [EDB-42031](https://www.exploit-db.com/exploits/42031)
+3. Try LDAP manual enumeration (above)
 
 
 ### PrivEsc Planning
 1. Kerberoast
-2. 
+2. Check MS16-032
