--- a/docs/OSCP practice exam/6. Sense.md
+++ b/docs/OSCP practice exam/6. Sense.md
@@ -23,3 +23,14 @@ Webserver
 ## A closer look at the webserver
 ![[Pasted image 20220203165217.png]]
 
+pfSense? Is that you?
+![[Pasted image 20220203172112.png]]
+
+Findings from the scan.
+```text
+└─$ cat */*ferox* | grep -E '^200' | sort -u                                                                                                                                 200       10l       40w      271c https://10.10.10.60/changelog.txt                                                                                                          200      173l      425w        0c https://10.10.10.60/                                                                                                                       200      173l      425w        0c https://10.10.10.60/edit.php                                                                                                               200      173l      425w        0c https://10.10.10.60/exec.php                                                                                                               200      173l      425w        0c https://10.10.10.60/graph.php                                                                                                              200      173l      425w        0c https://10.10.10.60/help.php                                                                                                               200      173l      425w        0c https://10.10.10.60/index.php                                                                                                              200      173l      425w        0c https://10.10.10.60/interfaces.php                                                                                                         200      173l      425w        0c https://10.10.10.60/license.php                                                                                                            200      173l      425w        0c https://10.10.10.60/pkg.php                                                                                                                200      173l      425w        0c https://10.10.10.60/stats.php                                                                                                              200      173l      425w        0c https://10.10.10.60/status.php                                                                                                             200      173l      425w        0c https://10.10.10.60/system.php                                                                                                             200      173l      425w        0c https://10.10.10.60/wizard.php                                                                                                             200       17l       26w      384c https://10.10.10.60/xmlrpc.php                                                                                                             200       24l       32w      329c https://10.10.10.60/index.html                                                                                                             200        7l       24w     1406c https://10.10.10.60/favicon.ico 
+```
+
+![[Pasted image 20220203173133.png]]
+
+
